force-app/main/default/objects/PROJECTS_PATENTS_VENTURES__c/PROJECTS_PATENTS_VENTURES__c.object-meta.xml
<CustomObject>
    <label>PROJECTS / PATENTS / VENTURES</label>
    <nameField>
        <label>Project / Venture name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PROJECTS / PATENTS / VENTURES</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>