force-app/main/default/objects/PROJECTS_PATENTS_VENTURES__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PROJECTS / PATENTS / VENTURES</relationshipLabel>
    <relationshipName>PROJECTS_PATENTS_VENTURES</relationshipName>
    <type>Lookup</type>
</CustomField>