force-app/main/default/objects/PROJECTS_PATENTS_VENTURES__c/fields/Contactrole__c.field-meta.xml
<CustomField>
    <fullName>Contactrole__c</fullName>
    <inlineHelpText>Please specify the role of the contact</inlineHelpText>
    <label>Contact role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>