force-app/main/default/objects/PROJECTS_PATENTS_VENTURES__c/fields/Patentdescnotes__c.field-meta.xml
<CustomField>
    <fullName>Patentdescnotes__c</fullName>
    <inlineHelpText>Please key in any further description related to patent, if required</inlineHelpText>
    <label>Patent desc. / notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>