force-app/main/default/objects/PROJECTS_PATENTS_VENTURES__c/fields/Patentlink__c.field-meta.xml
<CustomField>
    <fullName>Patentlink__c</fullName>
    <inlineHelpText>URL of the patent link</inlineHelpText>
    <label>Patent link</label>
    <type>Url</type>
</CustomField>