force-app/main/default/objects/PROJECTS_PATENTS_VENTURES__c/fields/PatentName__c.field-meta.xml
<CustomField>
    <fullName>PatentName__c</fullName>
    <inlineHelpText>Name of the patent</inlineHelpText>
    <label>Patent Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>