force-app/main/default/objects/PROJECTS_PATENTS_VENTURES__c/fields/Projectventuredescnotes__c.field-meta.xml
<CustomField>
    <fullName>Projectventuredescnotes__c</fullName>
    <inlineHelpText>Please key in any further description related to project/venture</inlineHelpText>
    <label>Project /venture desc. / notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>