force-app/main/default/objects/PROJECTS_PATENTS_VENTURES__c/fields/Projectventurelink__c.field-meta.xml
<CustomField>
    <fullName>Projectventurelink__c</fullName>
    <inlineHelpText>Please key in the URL of the project or venture</inlineHelpText>
    <label>Project / venture link</label>
    <type>Url</type>
</CustomField>